# wrapidjson

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
demo/: checker_demo.cpp  handler_n_querier_demo.cpp  io_helper_demo.cpp
include/wrapidjson/checker/: .checker.h.un~  .field_checker.h.un~  checker.h
include/wrapidjson/handler/: handler.h
include/wrapidjson/io_helper/: io_helper.h
include/wrapidjson/querier/: querier.h
include/wrapidjson/type_register/: type_register.h
src/demo/: .checker_demo.cpp.un~  checker_demo.cpp  handler_demo.cpp  handler_n_querier_demo.cpp
test_data/: json_file_demo.json  test_json0.txt
